correccion audio + unificacion template

--- a/englishwebsite/englishwebsite_app/templates/ListMultipleOption.html
+++ b/englishwebsite/englishwebsite_app/templates/ListMultipleOption.html
@@ -1,34 +1,19 @@
+{% extends "base.html" %}
 {% load static %}
 
 <!DOCTYPE html>
 <html>
 
-<head>
-	{% comment %} <link rel="stylesheet" type="text/css" href="{% static 'css/exercises.css' %}" /> {% endcomment %}
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="{% static '/css/login-register.css' %}"/>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
-    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <!-- Bootswatch-->
-    <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>
-</head>
 
 <body>
+	{% block contenido %}		
 	<section id="writingexercises" class="wrapper style3 special">
 		<div class="inner">
-			{% comment %} <header class="major">
-				<h2>MULTIPLE CHOICE EXERCISES</h2>
-				<input type="button" class="btn btn-info" onclick="history.back()" name="back" value="BACK TO MAIN">
-			</header> {% endcomment %}
 		<div class="jumbotron">
 			<h1 class="display-3">MULTIPLE CHOICE EXERCISES!</h1>
 			<p class="lead">In this section you can see the multiple choice excercises...</p>
 			<hr class="my-4">
-			<p>If you dont want see these excercises, you can go back to hompage.</p>
-			<p class="lead">
-			<a class="btn btn-primary btn-lg" href="/homelogin" role="button">HOMEPAGE</a>
-			</p>
+			
 		</div>
 		<div id="principal">
 			<h2>Exercises for all levels!</h2>
@@ -41,6 +26,7 @@
 			</ul>
 		</div>
 	</section>
+	{% endblock %}
 </body>
 
 </html>
