--- a/englishwebsite/englishwebsite_app/templates/createExercises.html
+++ b/englishwebsite/englishwebsite_app/templates/createExercises.html
@@ -14,17 +14,12 @@
 		<!-- Bootswatch-->
 		<link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>
 	</head>
-
+<a class="btn btn-primary btn-lg" href="/homelogin" role="button">HOMEPAGE</a>
 <body>
 	<section id="writingexercises" class="wrapper style3 special">
-		<p class="lead">
-			<a class="btn btn-primary btn-lg" href="homelogin" role="button">HOMEPAGE</a>
-		</p>
+		
 		<div class="inner">
-			{% comment %} <header class="major">
-				<h2>CREATE YOUR EXERCISES!</h2>
-				<input type="button" onclick="history.back()" name="back" value="BACK TO MAIN">
-			</header> {% endcomment %}
+			
 			<div class="jumbotron">
 				<h1 class="display-3">CREATE YOUR EXERCISES!</h1>
 				<p class="lead">In this section you can create your excercises...</p>
