--- a/englishwebsite/englishwebsite_app/templates/confirmed-email.html
+++ b/englishwebsite/englishwebsite_app/templates/confirmed-email.html
@@ -1,20 +1,22 @@
+{% extends "base.html" %}
 {% load static %}
 
 <!DOCTYPE html>
 <html>
 
-<head>
+<!-- <head>
 	{% comment %} <link rel="stylesheet" type="text/css" href="{% static 'css/exercises.css' %}" /> {% endcomment %}
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="{% static '/css/login-register.css' %}"/>
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSS --
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <!-- Bootswatch-->
+    <!-- Bootswatch--
     <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>
-</head>
+</head> -->
 
 <body>
+	{% block contenido %}
 	<section id="writingexercises" class="wrapper style3 special">
 		<div class="inner">
 		<div class="jumbotron">
@@ -28,6 +30,7 @@
 			</p>
 		</div>
 	</section>
+	{% endblock %}
 </body>
 
 </html>
