--- a/englishwebsite/englishwebsite_app/templates/homelogin.html
+++ b/englishwebsite/englishwebsite_app/templates/homelogin.html
@@ -52,11 +52,13 @@
                 </div>
                 <div class="col-lg-8 align-self-baseline">
                     <p class="text-white-150 font-weight-light mb-5" style="color: white;">
-                        Welcome again <big>{{ user.username }}</big> !
+                        Welcome <big>{{ user.username }}</big> !
                     </p>
+                    {% if request.user.is_authenticated %}
                     <p class="lead">
                         <a class="btn btn-primary btn-lg" href="/search" role="button">SEARCH FOR EXERSICES HERE!</a>
                     </p>
+                    {% endif %}
                 </div>
             </div>
         </div>
