--- a/englishwebsite/englishwebsite_app/templates/listening.html
+++ b/englishwebsite/englishwebsite_app/templates/listening.html
@@ -1,20 +1,12 @@
+{% extends "base.html" %}
+
 {% load static %}
 
 <!DOCTYPE html>
 <html>
 
-	<head>
-		{% comment %} <link rel="stylesheet" type="text/css" href="{% static 'css/exercises.css' %}" /> {% endcomment %}
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" type="text/css" href="{% static '/css/login-register.css' %}"/>
-		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
-		integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-		<!-- Bootswatch-->
-		<link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>
-	</head>
-
 <body>
+	{% block contenido %}
 	<section id="listeningexercises" class="wrapper style3 special">
 		<div class="inner">
 			{% comment %} <header class="major">
@@ -25,10 +17,7 @@
 				<h1 class="display-3">LISTENING EXERCISES!</h1>
 				<p class="lead">In this section you can see the listening excercises...</p>
 				<hr class="my-4">
-				<p>If you dont want see these excercises, you can go back to hompage.</p>
-				<p class="lead">
-				<a class="btn btn-primary btn-lg" href="homelogin" role="button">HOMEPAGE</a>
-				</p>
+
 			</div>
 			<ul>
 				{% for exercise in exercise_list %}
@@ -41,6 +30,7 @@
 			
 		</div>
 	</section>
+	{% endblock %}
 </body>
 
 </html>
