--- a/englishwebsite/englishwebsite_app/templates/multipleoptionExercise.html
+++ b/englishwebsite/englishwebsite_app/templates/multipleoptionExercise.html
@@ -1,28 +1,24 @@
-
 {% load static %}
 <head>
-    {% comment %} <link rel="stylesheet" type="text/css" href="{% static 'css/exercises.css' %}" /> {% endcomment %}
+    <!-- {% comment %} <link rel="stylesheet" type="text/css" href="{% static 'css/exercises.css' %}" /> {% endcomment %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% comment %} <link rel="stylesheet" type="text/css" href="{% static '/css/login-register.css' %}"/> {% endcomment %}
-    <!-- Bootstrap CSS -->
+    <Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <!-- Bootswatch-->
     <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>
 </head>
-<p class="lead">
-    <a class="btn btn-primary btn-lg" href="/homelogin" role="button">HOMEPAGE</a>
-</p>
-{% if messages %}
-  {% for message in messages %}
-    <div class="alert alert-dismissible alert-success">
-      <strong>{{message}}</strong>
+
+{% block forms %}
+<a class="btn btn-primary btn-lg" href="/homelogin" role="button">HOMEPAGE</a>
+
+<section id="writingexercises" class="wrapper style3 special">
+    <div class="inner">
+        <div class="jumbotron">
+            <h1 class="display-3">MULTIPLE CHOICE EXERCISES!</h1>
+        </div>    
     </div>
- {% endfor %}
-{% endif %}
-<div class="container ">
-<h1>Here is the Quiz!</h1>
-  
     <form method='post' action=''>
         {% csrf_token %}
         {% for q  in questions%}
@@ -57,8 +53,15 @@
             <br>
         </div>    
         {% endfor %}
-        
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-dismissible alert-success">
+                <strong>{{message}}</strong>
+                </div>
+            {% endfor %}
+        {% endif %}
         <br>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form> 
-</div>
+</section>    
+{% endblock %}
