--- a/englishwebsite/englishwebsite_app/templates/registration/login.html
+++ b/englishwebsite/englishwebsite_app/templates/registration/login.html
@@ -1,20 +1,22 @@
+{% extends "base.html" %}
 {% load static %}
 {% load crispy_forms_tags %}
 
 <!DOCTYPE html>
 <html>
 
-<head>
+<!-- <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="{% static '/css/login-register.css' %}"/>
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSS --
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <!-- Bootswatch-->
+    <!-- Bootswatch--
     <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>
-</head>
+</head> -->
 
 <body>
+    {% block contenido %}
     <form method="post">
         {% csrf_token %}
         <fieldset class="form-group">
@@ -32,6 +34,7 @@
             </small>
         </div>
     </form> 
+    {% endblock %}
 </body>
 
 </html>
