--- a/englishwebsite/englishwebsite_app/templates/search/search.html
+++ b/englishwebsite/englishwebsite_app/templates/search/search.html
@@ -1,19 +1,20 @@
+{% extends "base.html" %}
 {%load static%}
-<head>
+<!-- <head>
     {% comment %} <link rel="stylesheet" type="text/css" href="{% static 'css/exercises.css' %}" /> {% endcomment %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% comment %} <link rel="stylesheet" type="text/css" href="{% static '/css/login-register.css' %}"/> {% endcomment %}
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSS --
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <!-- Bootswatch-->
+    <!-- Bootswatch--
     <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>
 </head>
 <p class="lead">
     <a class="btn btn-primary btn-lg" href="/homelogin" role="button">HOMEPAGE</a>
-</p>
+</p> -->
+{% block contenido %}
 
-<h2>Buscar:</h2>
 
     <form method="get" action=".">
         <table>
@@ -46,3 +47,5 @@
             {% endif %}
         {% endif %}
     </form>
+
+{% endblock %}
