correccion nueva de los html y navegacion

--- a/englishwebsite/englishwebsite_app/templates/ListMultipleOption.html
+++ b/englishwebsite/englishwebsite_app/templates/ListMultipleOption.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "index.html" %}
 {% load static %}
 
 <!DOCTYPE html>
@@ -6,7 +6,7 @@
 
 
 <body>
-	{% block contenido %}		
+	{% block informacion %}		
 	<section id="writingexercises" class="wrapper style3 special">
 		<div class="inner">
 		<div class="jumbotron">
