--- a/englishwebsite/englishwebsite_app/templates/base.html
+++ b/englishwebsite/englishwebsite_app/templates/base.html
@@ -2,34 +2,34 @@
 
 <html>
     <head>
-        {% comment %} <link rel="stylesheet" type="text/css" href="{% static 'css/exercises.css' %}" /> {% endcomment %}
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="{% static '/css/login-register.css' %}"/>
-        <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-        <!-- Bootswatch -->
+        <!-- Bootswatch-->
         <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>
-        
         {%block header%}
         {%endblock%}
+        <style>
+            header.masthead {
+                padding-top: 10rem;
+                padding-bottom: calc(10rem - 3rem);
+                
+                background-position: center;
+                background-repeat: no-repeat;
+                background-attachment: scroll;
+                background-size: contain;
+            }
+        </style>
     </head> 
 
     <body>
         <!--Navbar-->
-        {% if request.user.is_authenticated %}
-        <div >
-            <a class="btn btn-primary btn-lg" href="/homelogin" role="button">HOMEPAGE</a>
-        </div>
-        
-        {% endif %}
+
         {% block contenido %}
 
         {% endblock %}
         <!-- Centerheader -->
     
     </body>
-    {% block forms %}
-    {% endblock%}
+    
 </html>
 
