--- a/englishwebsite/englishwebsite_app/templates/confirm-address.html
+++ b/englishwebsite/englishwebsite_app/templates/confirm-address.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "index.html" %}
 {% load static %}
 
 <!DOCTYPE html>
@@ -23,9 +23,6 @@
 			<h1 class="display-3">Confirm your email!</h1>
 			<p class="lead">Please confirm your email address to complete the registration!</p>
 			<hr class="my-4">
-			<p>You can go back to hompage.</p>
-			<p class="lead">
-			<a class="btn btn-primary btn-lg" href="{% url 'logout' %}" role="button">HOMEPAGE</a>
 			</p>
 		</div>
 	</section>
