--- a/englishwebsite/englishwebsite_app/templates/index.html
+++ b/englishwebsite/englishwebsite_app/templates/index.html
@@ -1,125 +1,26 @@
+{% extends "base.html" %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-  <title>English website</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
-
-  <!-- Favicons -->
-  <link href="{% static '/img/favicon.png' %}" rel="icon">
-  <link href="{% static '/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
-  <link href="{% static '/vendor/animate.css/animate.min.css' %}" rel="stylesheet">
-  <link href="{% static '/vendor/aos/aos.css' %}" rel="stylesheet">
-  <link href="{% static '/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-  <link href="{% static '/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
-  <link href="{% static '/vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet">
-  <link href="{% static '/vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet">
-  <link href="{% static '/vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
-
-  <!-- Template Main CSS File -->
-  <link rel="stylesheet" type="text/css" href="{% static '/css/style.css' %}"/>
-
-</head>
-
-<body>
-
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex align-items-center header-transparent">
-    <div class="container d-flex justify-content-between align-items-center">
-
-      <div class="logo">
-        <h1 class="text-light"><a href="/index"><span>ENGLISH WEBSITE</span></a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-      </div>
-
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a class="active " href="index.html">Home</a></li>
-          <li><a href="/admin">Admin</a></li>
-          <li><a href="/professors">Professors</a></li>
-          <li class="dropdown"><a href="#"><span>Activities</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Create exercises</a></li>
-              <li class="dropdown"><a href="#"><span>Exercises</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Writing</a></li>
-                  <li><a href="#">Reading</a></li>
-                  <li><a href="#">Speaking</a></li>
-                  <li><a href="#">Multiple choice</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-          {% if request.user.is_authenticated %}
-          <li><a href="accounts/logout">Log Out</a></li>
-          {% else %}
-          <li><a href="accounts/login">Log In</a></li>
-          {% endif %}
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-
-    </div>
-  </header><!-- End Header -->
-
-  <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex justify-cntent-center align-items-center">
-    <div id="heroCarousel" class="container carousel carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
-
-      <!-- Slide 1 -->
-      <div class="carousel-item active">
-        <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Welcome to <span>English Website</span></h2>
-          <p class="animate__animated animate__fadeInUp">A site where you can improve your level of English, focused on those people who have a solid foundation in the language, but look for more.</p>
-          <a href="/search" class="btn-get-started animate__animated animate__fadeInUp">Search for exercises</a>
+<html>
+    <body>
+      {% block contenido %}
+        <!--Navbar-->
+        {% if request.user.is_authenticated %}
+        <div >
+            <a class="btn btn-primary btn-lg" href="/homelogin" role="button">HOMEPAGE</a>
         </div>
-      </div>
-
-      <!-- Slide 2 -->
-      <div class="carousel-item">
-        <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Professors section</h2>
-          <p class="animate__animated animate__fadeInUp">Where you can find the best educators or if you are, you can apply.</p>
-          <a href="professors/" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
+        {%else%}
+        <div >
+            <a class="btn btn-primary btn-lg" href="/" role="button">HOMEPAGE</a>
         </div>
-      </div>
+        
+        {% endif %}
+        {% block informacion %}
 
-      <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon bx bx-chevron-left" aria-hidden="true"></span>
-      </a>
-
-      <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
-        <span class="carousel-control-next-icon bx bx-chevron-right" aria-hidden="true"></span>
-      </a>
-
-    </div>
-  </section><!-- End Hero -->
-
-
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-  <!-- Vendor JS Files -->
-  <script src="{% static '/vendor/purecounter/purecounter_vanilla.js' %}"></script>
-  <script src="{% static '/vendor/aos/aos.js' %}"></script>
-  <script src="{% static '/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-  <script src="{% static '/vendor/glightbox/js/glightbox.min.js' %}"></script>
-  <script src="{% static '/vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
-  <script src="{% static '/vendor/swiper/swiper-bundle.min.js' %}"></script>
-  <script src="{% static '/vendor/waypoints/noframework.waypoints.js' %}"></script>
-  <script src="{% static '/vendor/php-email-form/validate.js' %}"></script>
-
-</body>
-
+        {% endblock informacion%}
+        <!-- Centerheader -->
+      {% endblock %}
+    </body>
+    
 </html>
+
