--- a/englishwebsite/englishwebsite_app/templates/listening.html
+++ b/englishwebsite/englishwebsite_app/templates/listening.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "index.html"  %}
 
 {% load static %}
 
@@ -6,7 +6,7 @@
 <html>
 
 <body>
-	{% block contenido %}
+	{% block informacion %}
 	<section id="listeningexercises" class="wrapper style3 special">
 		<div class="inner">
 			{% comment %} <header class="major">
