--- a/englishwebsite/englishwebsite_app/templates/reading.html
+++ b/englishwebsite/englishwebsite_app/templates/reading.html
@@ -1,10 +1,10 @@
-{% extends "base.html" %}
+{% extends "index.html" %}
 
 {% load static %}
 <!DOCTYPE html>
 <html>
 <body>
-	{% block contenido %}
+	{% block informacion %}
 	<section id="readingexercises" class="wrapper style3 special">
 		<div class="inner">
 			
