--- a/englishwebsite/englishwebsite_app/templates/addMultipleOption.html
+++ b/englishwebsite/englishwebsite_app/templates/addMultipleOption.html
@@ -1,20 +1,6 @@
-
+{% extends "index.html" %}
 {%load static%}
-<head>
-    {% comment %} <link rel="stylesheet" type="text/css" href="{% static 'css/exercises.css' %}" /> {% endcomment %}
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    {% comment %} <link rel="stylesheet" type="text/css" href="{% static '/css/login-register.css' %}"/> {% endcomment %}
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
-    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <!-- Bootswatch-->
-    <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>
-</head>
-<p class="lead">
-    <a class="btn btn-primary btn-lg" href="/homelogin" role="button">HOMEPAGE</a>
-</p>
-<body>
-{% block contenido %}
+{% block informacion %}
 <div class="jumbotron container row">
     <div class="col-md-6">
         <h1>Add Question</h1>
