--- a/englishwebsite/englishwebsite_app/templates/barra.html
+++ b/englishwebsite/englishwebsite_app/templates/barra.html
@@ -27,21 +27,11 @@
             </li>
            
         {% else %}
-            {% comment %} <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-user"></i>
-                    <big>Log In</big>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
-                    <a class="dropdown-item text-dark" href="/accounts/login/">LOG IN</a>
-                    <a class="dropdown-item text-dark" href="/register/">REGISTER</a>
-                </div>
-            </li> {% endcomment %}
             <li class="nav-item dropdown active">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><big> LOG IN </big></a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item text-dark" href="/accounts/login/">LOG IN</a>
-                    <a class="dropdown-item text-dark" href="/register/">REGISTER</a>      
+                    <a class="dropdown-item" href="/accounts/login/">LOG IN</a>
+                    <a class="dropdown-item" href="/register/">REGISTER</a>      
             </li>
         {% endif %}
         <div/>
