--- a/englishwebsite/englishwebsite_app/templates/createExercises.html
+++ b/englishwebsite/englishwebsite_app/templates/createExercises.html
@@ -1,21 +1,13 @@
+{% extends "index.html" %}
 {% load static %}
 {% load crispy_forms_tags %}
 
 <!DOCTYPE html>
 <html>
 
-	<head>
-		{% comment %} <link rel="stylesheet" type="text/css" href="{% static 'css/exercises.css' %}" /> {% endcomment %}
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		{% comment %} <link rel="stylesheet" type="text/css" href="{% static '/css/login-register.css' %}"/> {% endcomment %}
-		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
-		integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-		<!-- Bootswatch-->
-		<link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>
-	</head>
-<a class="btn btn-primary btn-lg" href="/homelogin" role="button">HOMEPAGE</a>
+	
 <body>
+	{% block informacion %}
 	<section id="writingexercises" class="wrapper style3 special">
 		
 		<div class="inner">
@@ -34,6 +26,7 @@
             </form>
 	
 	</section>
+	{% endblock %}
 </body>
 
 </html>
