--- a/englishwebsite/englishwebsite_app/templates/exersiceDetails.html
+++ b/englishwebsite/englishwebsite_app/templates/exersiceDetails.html
@@ -1,36 +1,33 @@
-{% extends "base.html" %}
+{% extends "index.html" %}
 {% load static %}
-<!-- <head>
-	{% comment %} <link rel="stylesheet" type="text/css" href="{% static 'css/exercises.css' %}" /> {% endcomment %}
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="{% static '/css/login-register.css' %}"/>
-    <!-- Bootstrap CSS --
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
-    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <!-- Bootswatch--
-    <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>
-</head> -->
-{% block contenido %}
-<div id="principal">
-    <ul>
-            <h2>{{exercise.title_exercise}} - Author: {{exercise.author}} </h2>
+{% block informacion %}
+<section id="writingexercises" class="wrapper style3 special">
+    <div class="inner">
+        <div class="jumbotron">
+            <h2 class="display-3">{{exercise.title_exercise}} - Author: {{exercise.author}} </h2>
             <br/>
-            <h3>{{exercise.description_exercise}}</h3>
-            <br/>
-            <p>{{exercise.activity}}</p>
-            {% if exercise.file != '' %}
-                <img src= '{{MEDIA_URL}}{{exercise.file}}' width="400" height="250" alt="Image for the activiy. If it doesn't exist, you will see this message">
-            {% endif %}
-            <br/>
-            {% if exercise.audio != '' %}
-                <audio controls autoplay>
-                    <source src="{{MEDIA_URL}}{{exercise.audio}}" type="audio/mpeg">
-                there is no audio here.
-                </audio> 
-            {% endif %}
-            <details>
-                <summary>Correct answer</summary>
-                <p>{{exercise.correct_answer}}</p>
-            </details>
-</div>
+            <p class="lead">{{exercise.description_exercise}}</p>
+            <hr class="my-4">
+        </div>
+    </div>
+    <div id="principal">
+        <ul>
+                <p>{{exercise.activity}}</p>
+                {% if exercise.file != '' %}
+                    <img src= '{{MEDIA_URL}}{{exercise.file}}' width="400" height="250" alt="Image for the activiy. If it doesn't exist, you will see this message">
+                {% endif %}
+                <br/>
+                {% if exercise.audio != '' %}
+                    <audio controls autoplay>
+                        <source src="{{MEDIA_URL}}{{exercise.audio}}" type="audio/mpeg">
+                    there is no audio here.
+                    </audio> 
+                {% endif %}
+                <details>
+                    <summary>Correct answer</summary>
+                    <p>{{exercise.correct_answer}}</p>
+                </details>
+    </div>
+</section>
+
 {% endblock %}
