--- a/englishwebsite/englishwebsite_app/templates/invalid-link.html
+++ b/englishwebsite/englishwebsite_app/templates/invalid-link.html
@@ -1,20 +1,11 @@
+{% extends "index.html" %}
 {% load static %}
 
 <!DOCTYPE html>
 <html>
 
-<head>
-	{% comment %} <link rel="stylesheet" type="text/css" href="{% static 'css/exercises.css' %}" /> {% endcomment %}
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="{% static '/css/login-register.css' %}"/>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
-    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <!-- Bootswatch-->
-    <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>
-</head>
-
 <body>
+	{% block informacion %}
 	<section id="writingexercises" class="wrapper style3 special">
 		<div class="inner">
 		<div class="jumbotron">
@@ -22,11 +13,11 @@
 			<p class="lead">Please try to register again or go back to homepage.</p>
 			<hr class="my-4">
 			<p class="lead">
-			<a class="btn btn-primary btn-lg" href="{% url 'logout' %}" role="button">HOMEPAGE</a>
             <a class="btn btn-primary btn-lg" href="/register/" role="button">REGISTER</a>
 			</p>
 		</div>
 	</section>
+	{%endblock%}
 </body>
 
 </html>
