--- a/englishwebsite/englishwebsite_app/templates/professors_apply.html
+++ b/englishwebsite/englishwebsite_app/templates/professors_apply.html
@@ -1,20 +1,13 @@
-{% extends "base.html" %}
+{% extends "index.html" %}
 {% load static %}
 {% load crispy_forms_tags %}
 
 <!DOCTYPE html>
 <html>
 
-	<head>
-		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
-		integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-		<!-- Bootswatch-->
-		<link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>
-	</head>
 
 <body>
-	{% block contenido %}
+	{% block informacion %}
 	<section id="professors_apply" class="wrapper style3 special">
 		<p class="lead">
 		</p>
