--- a/englishwebsite/englishwebsite_app/templates/professors_more.html
+++ b/englishwebsite/englishwebsite_app/templates/professors_more.html
@@ -1,3 +1,4 @@
+{% extends "index.html" %}
 {% load static %}
 
 <!DOCTYPE html>
@@ -7,8 +8,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        {%block headers%}
         <title>More info {{professor.name}}</title>
-
+        {%endblock headers%}
 
         <!-- CSS -->
         <link rel="stylesheet" type="text/css" href="{% static '/css/professors.css' %}"/>
@@ -19,8 +21,9 @@
 		<link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>                           
     </head>
     <body>
+        {%block informacion %}
         <div>
-            <a class="button" onclick="history.back()" role="button">Back</a> 
+            
             <div class="jumbotron">
                 <h1 class="display-3">{{professor.name}}</h1>
                 <p class="lead">{{professor.short_description}}</p>
@@ -42,7 +45,7 @@
                 </script>
                 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
         </div>
-
+        {%endblock%}
     </body>
 
 </html>
