--- a/englishwebsite/englishwebsite_app/templates/register.html
+++ b/englishwebsite/englishwebsite_app/templates/register.html
@@ -1,27 +1,25 @@
+{% extends "index.html" %}
 {% load crispy_forms_tags %}
 {% load static %}
-{% block content %}
 
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="{% static '/css/login-register.css' %}"/>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
-    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <!-- Bootswatch-->
-    <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>
-
-</head>
-
+{% block informacion %}
+<section class="wrapper style3 special">
+    <div class="inner">
+        <div class="jumbotron">
+            <h1 class="display-3">REGISTER!</h1>
+            <p class="lead">In this section you can register yourself...</p>
+            <hr class="my-4">
+        </div>
+    </div>
+</section>
 <div>
 	<form class="form" method="post">
 		{% csrf_token %}
 			<fieldset class="form-group">
-				<legend class="border-buttom mb-2">REGISTER</legend>
+				
 				{{ form|crispy }}
 			</fieldset>
 			<div class="form-group" style = "text-align: center;">
-				<a class="btn btn-primary" href="{% url 'logout' %}" role="button">Home</a>
 				<button class="btn btn-success" type="submit">Confirm</button>
 			</div>
 			<div class="d-flex align-items-center justify-content-center pb-4">
@@ -31,7 +29,7 @@
 			</div>
 	</form>
 </div>
+{%endblock informacion%}
 
 
-{% endblock %}
 
