--- a/englishwebsite/englishwebsite_app/templates/registration/login.html
+++ b/englishwebsite/englishwebsite_app/templates/registration/login.html
@@ -1,22 +1,12 @@
-{% extends "base.html" %}
+{% extends "index.html" %}
 {% load static %}
 {% load crispy_forms_tags %}
 
 <!DOCTYPE html>
 <html>
 
-<!-- <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="{% static '/css/login-register.css' %}"/>
-    <!-- Bootstrap CSS --
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
-    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <!-- Bootswatch--
-    <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>
-</head> -->
-
 <body>
-    {% block contenido %}
+    {% block informacion %}
     <form method="post">
         {% csrf_token %}
         <fieldset class="form-group">
@@ -25,7 +15,6 @@
             {{ form|crispy }}
         </fieldset>
         <div class="form-group" style = "text-align: center;">
-            <a class="btn btn-primary" href="{% url 'logout' %}" role="button">Home</a>
             <button type="submit" class="btn btn-success" href="/registration/login/">Confirm</button>
         </div>    
         <div class="d-flex align-items-center justify-content-center pb-4">
