--- a/englishwebsite/englishwebsite_app/templates/search/search.html
+++ b/englishwebsite/englishwebsite_app/templates/search/search.html
@@ -1,20 +1,16 @@
-{% extends "base.html" %}
+{% extends "index.html" %}
 {%load static%}
-<!-- <head>
-    {% comment %} <link rel="stylesheet" type="text/css" href="{% static 'css/exercises.css' %}" /> {% endcomment %}
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    {% comment %} <link rel="stylesheet" type="text/css" href="{% static '/css/login-register.css' %}"/> {% endcomment %}
-    <!-- Bootstrap CSS --
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
-    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <!-- Bootswatch--
-    <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>
-</head>
-<p class="lead">
-    <a class="btn btn-primary btn-lg" href="/homelogin" role="button">HOMEPAGE</a>
-</p> -->
-{% block contenido %}
-
+ 
+{% block informacion %}
+<section id="writingexercises" class="wrapper style3 special">
+    <div class="inner">
+        <div class="jumbotron">
+            <h1 class="display-3">Searching!</h1>
+            <p class="lead">In this section you can search excercises...</p>
+            <hr class="my-4">
+        </div>
+    </div>
+</section>
 
     <form method="get" action=".">
         <table>
