--- a/englishwebsite/englishwebsite_app/templates/speaking.html
+++ b/englishwebsite/englishwebsite_app/templates/speaking.html
@@ -1,22 +1,12 @@
-{% extends "base.html" %}
+{% extends "index.html" %}
 {% load static %}
 
 <!DOCTYPE html>
 <html>
 
-	<!-- <head>
-		{% comment %} <link rel="stylesheet" type="text/css" href="{% static 'css/exercises.css' %}" /> {% endcomment %}
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" type="text/css" href="{% static '/css/login-register.css' %}"/>
-		
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
-		integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-		
-		<link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>
-	</head> -->
 
 <body>
-	{% block contenido %}
+	{% block informacion %}
 	<section id="speakingexercises" class="wrapper style3 special">
 		<div class="inner">
 			<div class="jumbotron">
